@@ -1,5 +1,9 @@
 2008-09-20  Nicolas François  <nicolas.francois@centraliens.net>
 
+	* src/login.c: Use a dynamic buffer for usernames.
+
+2008-09-20  Nicolas François  <nicolas.francois@centraliens.net>
+
 	* src/login.c: Existence of pam_user was already checked. pwd was
 	already copied to pwent. Remove duplicated code.
 
